--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "node": "npx hardhat node --hostname 127.0.0.1 --port 8545"
+    "node": "npx hardhat node --hostname 127.0.0.1 --port 8545",
+    "dev": "node scripts/dev.js"
   },
   "keywords": [],
   "author": "",
@@ -21,7 +22,6 @@
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.18.12",
     "chai": "^5.3.3",
-    "concurrently": "^9.2.1",
     "dotenv": "^17.2.3",
     "ethers": "^6.15.0",
     "forge-std": "github:foundry-rs/forge-std#v1.9.4",
